--- a/src/Components/Body/NavigationBar/NavigationBar.module.css
+++ b/src/Components/Body/NavigationBar/NavigationBar.module.css
@@ -1,9 +1,24 @@
-.nav1 {
-    height: 500px;
-    width: 100%;
+
+.wrapper {
+    display: flex;
+    gap: 20px;
 }
 
-.nav1_responsive {
-    height: 500px;
-    width: 400px;
+.wrapper .card:nth-child(1) {
+    width: 70%;
+}
+
+.wrapper .card:nth-child(2) {
+    width: 30%;
+}
+
+.card img {
+    width: 100%;
+    height: 400px;
+}
+
+@media (max-width: 850px) {
+    .wrapper {
+        flex-direction: column;
+    }
 }
